--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @layer base{
     *{
         box-sizing: border-box;
+        user-select: none;
     }
 }
 
@@ -18,8 +19,7 @@
     display: none;
 }
 
-/* For IE, Edge and Firefox */
 .scrollbar-hide {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none; 
 }
